@@ -1,7 +1,7 @@
-mink
+monolinker
 ====
 
-Mink is the Mono CIL Linker.
+monolinker is the Mono CIL Linker.
 
 The linker is a tool one can use to only ship the minimal possible set of
 functions that a set of programs might require to run as opposed to the full
@@ -21,7 +21,7 @@ necessary for the source program to run.
 
 The command:
 
-mink -a Program.exe
+monolinker -a Program.exe
 
 will use the assembly Program.exe as a source. That means that the linker will
 walk through all the methods of Program.exe to generate only what is necessary
@@ -31,7 +31,7 @@ for this assembly to run.
 
 The command:
 
-mink -x desc.xml
+monolinker -x desc.xml
 
 will use the XML descriptor as a source. That means that the linker will
 use this file to decide what to link in a set of assemblies. The format of the
