@@ -1,5 +1,5 @@
 .\"
-.\" Mink manual page.
+.\" The Mono Linker manual page.
 .\"
 .\" Author:
 .\"	Jb Evain  <jbevain@novell.com>
@@ -11,14 +11,14 @@
 .if t .sp .5v
 .if n .sp
 ..
-.TH CIL Linker "mink"
+.TH CIL Linker "monolinker"
 .SH NAME
 Mono CIL Linker
 .SH SYNOPSIS
 .PP
-.B mink [-o output_directory] [-c skip | copy | link] -x descriptor | -a assemblies ...
+.B monolinker [-o output_directory] [-c skip | copy | link] -x descriptor | -a assemblies ...
 .SH DESCRIPTION
-\fImink\fP is a CIL Linker.
+\fImonolinker\fP is a CIL Linker.
 
 The linker is a tool one can use to only ship the minimal possible set of
 functions that a set of programs might require to run as opposed to the full
